fixed Scroller visibility

--- a/styles/colors-carbon.less
+++ b/styles/colors-carbon.less
@@ -264,4 +264,4 @@
 
 // Scroller
 // ---------------------------------------
-@agate-scroller-scrollbar-thumb-bg-color: #373737;
+@agate-scroller-scrollbar-thumb-bg-color: @agate-gray;
