--- a/styles/colors-cobalt-day.less
+++ b/styles/colors-cobalt-day.less
@@ -271,4 +271,4 @@
 
 // Scroller
 // ---------------------------------------
-@agate-scroller-scrollbar-thumb-bg-color: #373737;
+@agate-scroller-scrollbar-thumb-bg-color: @agate-gray;
