--- a/styles/colors-copper-day.less
+++ b/styles/colors-copper-day.less
@@ -272,4 +272,4 @@
 
 // Scroller
 // ---------------------------------------
-@agate-scroller-scrollbar-thumb-bg-color: #373737;
+@agate-scroller-scrollbar-thumb-bg-color: @agate-accent;
