--- a/styles/colors-electro.less
+++ b/styles/colors-electro.less
@@ -283,4 +283,4 @@
 
 // Scroller
 // ---------------------------------------
-@agate-scroller-scrollbar-thumb-bg-color: #373737;
+@agate-scroller-scrollbar-thumb-bg-color: @agate-text-color;
