--- a/styles/colors-titanium.less
+++ b/styles/colors-titanium.less
@@ -261,4 +261,4 @@
 
 // Scroller
 // ---------------------------------------
-@agate-scroller-scrollbar-thumb-bg-color: #373737;
+@agate-scroller-scrollbar-thumb-bg-color: @agate-gray;
